--- a/templates/base.html
+++ b/templates/base.html
@@ -24,5 +24,9 @@
     </main>
     {% include "footer.html" %}
 
+    {% block js %}
+        <!-- Загрузка JavaScript -->
+    {% endblock js %}
+
     </body>
 </html>
