--- a/templates/new_recipe.html
+++ b/templates/new_recipe.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
-{% block title %} Добавить рецепт {% endblock %}
+{% load static %}
+{% block title%} Добавить рецепт {% endblock%}
     {% load static %}
     {% block new_recipe %} <li class="nav__item nav__item_active"> {% endblock %}
     {% csrf_token %}
@@ -14,7 +15,7 @@
         {% csrf_token %}
         <div class="form__group">
             <label for="{{ form.title.id_for_label }}" class="form__label">Название рецепта</label>
-            <dev class="form__field-group">
+            <div class="form__field-group">
                 {{ form.title|addclass:"form__input" }}
                 {% if form.errors %}
                     {% for error in form.title.errors %}
@@ -23,68 +24,54 @@
                 {% endif %}
             </div>
         </div>
-    <div class="form__group">
-        <p class="form__label">Теги</p>
-        <div class="form__field-group">
-            <div class="tags">
-                {% for tag_choice, tag_value in form.tags.field.choices %}
-                    <div class="tags__item">
-                        <input
-                            type="checkbpx"
-                            name="tags"
-                            value="{{ tag_choice.instance.pk }}"
-                            id="id_{{ tag_choice.instance.slug }}"
-                            class="tags__checkbox tags__checkbox_style_{{ tag_choice.instance.color }}"
-                            {% if tag.choice.instance in form.instance.tags.all %} checked {% endif %}>
-                        <label for="id_{{ tag_choice.instance.slug }}"
-                        class="tags__label">{{ tag_choice.instance.name }}</label>
-                    </div>
-                {% endfor %}
-            </div>
-            {% if form.errors %}
-                {% for error in form.tags.errors %}
-                    <span class="form__error">{{ error|escape }}</span>
-                {% endfor %}
-            {% endif %}
-        </div>
-    </div>
-
-    <div class="form__group">
-        <label for="nameIngredient" class="form__label">Ингредиенты</label>
-        <div class="form__field-group">
-            <div class="form__field-group-ingredientes">
-                <div class="form__dropdown">
-                    <input type="text" id="nameIngredient" class="form__input">
-                    <div class="form__dropdown-items"></div>
+      <div class="form__group">
+            <p class="form__label">Теги</p>
+            <div class="form__field-group">
+                <div class="tags">
+                    {% for tag_choice, tag_value in form.tags.field.choices %}
+                        <div class="tags__item">
+                            <input
+                                type="checkbox"
+                                name="tags"
+                                value="{{ tag_choice.instance.pk }}"
+                                id="id_{{ tag_choice.instance.slug }}"
+                                class="tags__checkbox tags__checkbox_style_{{ tag_choice.instance.color }}"
+                                {% if tag_choice.instance in form.instance.tags.all %} checked {% endif %}>
+                            <label for="id_{{ tag_choice.instance.slug }}" class="tags__label">{{ tag_choice.instance.name }}</label>
+                        </div>
+                    {% endfor %}
                 </div>
-                <input type="number" id="candidat" class="form__input" min="0">
-                <label for="candidat" class="form__label" id="candidatVal">шт.</label>
-            </div>
-            <div class="form__field-group-ingredientes-container"></div>
-
-
-            <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-            <span class="form_error">
-                {% if form.non_field_errors %}
-                    <div class="non-field-errors">
-                        {% for error in form.non_field_errors %}
-                            <p class="form-error">{{ error }}</p>
-                        {% endfor %}
-                    </div>
+                {% if form.errors %}
+                    {% for error in form.tags.errors %}
+                        <span class="form__error">{{ error|escape }}</span>
+                    {% endfor %}
                 {% endif %}
-                </span>
-
-
-<span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
-<span class="form__error">
-    {% if form.non_field_errors %}
-        <div class="non-field-errors">
-            {% for error in form.non_field_errors %}
-                <p class="form-error">{{ error }}</p>
-            {% endfor %}
+            </div>
         </div>
-    {% endif %}
-</span>
+
+
+        <div class="form__group">
+            <label for="nameIngredient" class="form__label">Ингредиенты</label>
+            <div class="form__field-group">
+                <div class="form__field-group-ingredientes">
+                    <div class="form__dropdown">
+                        <input type="text" id="nameIngredient" class="form__input">
+                        <div class="form__dropdown-items"></div>
+                    </div>
+                    <input type="number" id="cantidad" class="form__input" min="0">
+                    <label for="cantidad" class="form__label" id="cantidadVal">шт.</label>
+                </div>
+                <div class="form__field-group-ingredientes-container"></div>
+                <span class="form__ingredient-link" id="addIng">Добавить ингредиент</span>
+                <span class="form__error">
+                     {% if form.non_field_errors %}
+                    <div class="non-field-errors">
+                      {% for error in form.non_field_errors %}
+                   <p class="form-error">{{ error }}</p>
+                     {% endfor %}
+                      </div>
+                     {% endif %}
+                    </span>
             </div>
         </div>
         <div class="form__group">
@@ -129,12 +116,11 @@
         </form>
     </div>
 
-
-</main>
 <script src="{% static 'js/config/config.js' %}"></script>
+
 <script src="{% static 'js/components/Header.js' %}"></script>
 <script src="{% static 'js/utils/debouncing.js' %}"></script>
 <script src="{% static 'js/api/Api.js' %}"></script>
-<script src="{% static 'js/formRecipe.js' %}"></script>
+<script src="{% static 'formRecipe.js' %}"></script>
 
 {% endblock %}
