--- a/templates/flatpages/default.html
+++ b/templates/flatpages/default.html
@@ -1,42 +1,17 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+{% load static %}
+{% block static %}
+    <link rel="stylesheet" href="{% static "/pages/index.css" %}">
+{% endblock %}
 {% block title %} {{ flatpage.title }} {% endblock %}
-    {% load static %}
-    {% csrf_token %}
-    {% block static %}
-    <link rel="stylesheet" href={% static 'pages/index.css' %}>
-    {% endblock %}
-    {% block index %} <li class="nav__item nav__item_active"> {% endblock %}
-    {% load user_filters %}
-    {% load templates_filters %}
+{% block nav %}
+    {% include "nav.html"%}
+{% endblock %}
+{% block content %}
 
-    {% block content %}
-    <main class="main container">
- <div class="container">
-        <h1>{{ flatpage.title }}</h1>
-        {{ flatpage.content }}
+<div class="main__header">
+    <h1 class="main__title">{{ flatpage.title }}</h1>
+ 
 </div>
-    </main>
-
-    <script src="{% static 'js/config/config.js' %}"></script>
-    {% if user.is_authenticated %}
-    <script src="{% static 'js/components/MainCards.js' %}"></script>
-
-    <script src="{% static 'js/components/Purchases.js' %}"></script>
-    <script src="{% static 'js/components/Favorites.js' %}"></script>
-
-    <script src="{% static 'js/components/CardList.js' %}"></script>
-    <script src="{% static 'js/components/Header.js' %}"></script>
-
-    <script src="{% static 'js/api/Api.js' %}"></script>
-    <script src="{% static 'js/indexAuth.js' %}"></script>
-    {% else %}
-    <script src="{% static 'js/components/MainCards.js' %}"></script>
-    <script src="{% static 'js/components/Purchases.js' %}"></script>
-
-    <script src="{% static 'js/components/CardList.js' %}"></script>
-    <script src="{% static 'js/components/Header.js' %}"></script>
-
-    <script src="{% static 'js/api/Api.js' %}"></script>
-    <script src="{% static 'js/indexNotAuth.js' %}"></script>
-    {% endif %}
-    {% endblock %}
+<p class="custom-text-block">{{ flatpage.content }}</p>
+{% endblock %} 
