--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,3 +1,4 @@
+
 <header class="header">
       <nav class="nav">
           <div class="nav__container container">
@@ -7,7 +8,7 @@
                   <li class="nav__item {% if follow %} nav__item_active {% endif %}"><a href="{% url 'follow' %}" class="nav__link link">Подписки</a></li>
                   <li class="nav__item {% if new_recipe %} nav__item_active {% endif %}"><a href="{% url 'new_recipe' %}" class="nav__link link">Создать рецепт</a></li>
                   <li class="nav__item {% if favorite %} nav__item_active {% endif %}"><a href="{% url 'favorite' %}" class="nav__link link">Избранное</a></li>
-                  <li class="nav__item {% if purchases %} nav__item_active {% endif %}"><a href="{% url 'shopping-list' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{{ shoping_list_count }}</span></li>
+                  <li class="nav__item {% if purchases %} nav__item_active {% endif %}"><a href="{% url 'shopping-list' %}" class="nav__link link">Список покупок</a> <span class="badge badge_style_blue nav__badge" id="counter">{{ count|default_if_none:"0"}}</span></li>
 
               </ul>
               <ul class="nav__items list">
@@ -27,4 +28,3 @@
           </div>
       </nav>
   </header>
-  
