--- a/users/templates/reg.html
+++ b/users/templates/reg.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'pages/form.css' %}">
 {% endblock %}
 {% block content %}
+{% include 'nav.html' with purchases=True%}
 <main class="main container">
     <div class="main__header">
         <h1 class="main__title">Регистрация</h1>
