--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -5,11 +5,10 @@
     <link rel="stylesheet" href="{% static 'pages/form.css' %}">
 {% endblock %}
 {% block title %}Войти на сайт{% endblock %}
-{% block nav %}
-    {% include "nav.html"%}
-{% endblock %}
-{% block content %}
 
+{% block content %}
+{% include 'nav.html' with purchases=True%}
+<main class="main container">
     <div class="main__header">
         <h1 class="main__title">Войти на сайт</h1>
     </div>
@@ -40,5 +39,5 @@
             </div>
         </form>
     </div>
-    
+</main>
 {% endblock %}
